[package]
name = "mruby-sys"
version = "0.1.1"
authors = ["Matt McDonald <mail.matt.mcdonald@gmail.com>"]
edition = "2018"
links = "mruby"
build = "build.rs"
description = "low level rust bindings for mruby"
repository = "https://github.com/MattMcDonald/mruby-sys"
license = "MIT"
readme = "README.md"
keywords = ["ruby", "mruby", "ffi"]
categories = ["external-ffi-bindings"]


[dependencies]

[build-dependencies]
bindgen = "0.49.2"
